<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ActivityMain">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView

        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/txt_total_memory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:text="@string/txt_total_meory"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/txt_memory_size" />

                    <TextView
                        android:id="@+id/total_memory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:text="@string/total_memory"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/txt_memory_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/txt_used_memory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:text="@string/txt_used_memory"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/txt_memory_size" />

                    <TextView
                        android:id="@+id/used_memory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:text="@string/total_memory"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/txt_memory_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/txt_free_memory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:text="@string/free_memory"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/txt_memory_size" />

                    <TextView
                        android:id="@+id/free_memory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:text="@string/total_memory"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/txt_memory_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/memory_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight=".4"
                        android:text="@string/txt_ram_condition"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_memory_size" />

                    <ImageView
                        android:id="@+id/stateImage"
                        android:layout_width="105dp"
                        android:layout_height="48dp"
                        android:layout_weight=".6"
                        android:src="@drawable/greenstate" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/linearLayout"
                android:gravity="center"
                android:id="@+id/ll2"
                android:orientation="vertical">

                <com.skyfishjy.library.RippleBackground xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    app:rb_color="@color/primary"
                    app:rb_duration="4000"
                    app:rb_radius="23dp"
                    app:rb_rippleAmount="5"
                    app:rb_scale="3">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="155dp"
                        android:layout_height="155dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/button_border"
                        android:text="@string/boost"
                        android:textColor="@color/icons"
                        android:textStyle="bold" />
                </com.skyfishjy.library.RippleBackground>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
